# fingers_controller

./: CMakeLists.txt  README.md  package.xml
cfg/prop_rot/: prop_rot_params.yaml
config/: allegro_hand_config.rviz
config/robots/kuka_lwr/: controllers.yaml  hw_interface.yaml
config/rviz/: allegro_object.rviz  kuka_allegro_object.rviz  object.rviz
include/: fnPropRot.h
launch/: kuka_allegro.launch  object.launch  object_only.launch  prop_rot.launch  test.launch  tmp.xml
models/: allegro_hand_description_left_melodic.urdf  cylinder.urdf
models/objects/: box.urdf.xacro
models/robots/: single_lwr_robot.urdf.xacro
msg/: fingers_cmd.msg
src/: add_cylinder.cpp  finger_controller.cpp  fingers_biotac_ft.cpp  fnPropRot.cpp  ft_torque_controller.cpp  obj_motion_gen_node.cpp  test_prop_controller.cpp
worlds/: allegro.world  experiment_1.world  simple_environment.world
